vsvc/employee.vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employee-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - "apigateway"
  http:
    - name: employee
      match:
      - port: 80
        uri:
          prefix: /api/Employee
      route:
      - destination:
          host: employee
          port:
            number: 90
