vsvc/employeesearchbff.vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employeesearchbff-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - "apigateway"
  http:
    - name: employeesearchbff
      match:
      - port: 80
        uri:
          prefix: /api/EmployeeSearchBff
      route:
      - destination:
          host: employeesearchbff
          port:
            number: 90
