vsvc/grafana.vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - "apigateway"
  http:
    - name: grafana
      match:
      - port: 3000
      route:
      - destination:
          host: grafana.istio-system.svc.cluster.local
          port:
            number: 3000
