vsvc/jaeger.vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - "apigateway"
  http:
    - name: jaeger
      match:
      - port: 16686
      route:
      - destination:
          host: jaeger.istio-system.svc.cluster.local
          port:
            number: 16686
