vsvc/keycloak.vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - "apigateway"
  http:
    - name: keycloak
      match:
      - port: 20000
      route:
      - destination:
          host: keycloak.default
          port:
            number: 8080
