vsvc/kibana.vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - "apigateway"
  http:
    - name: kibana
      match:
      - port: 5601
      route:
      - destination:
          host: kibana.logging-system.svc.cluster.local
          port:
            number: 5601
