vsvc/knowledge.vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: knowledge-vsvc
spec:
  hosts:
  - "*"
  gateways:
  - "apigateway"
  http:
    - name: knowledge
      match:
      - port: 80
        uri:
          prefix: /api/Knowledge
      route:
      - destination:
          host: knowledge
          port:
            number: 90
