vsvc/mssql.vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mssql
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - "apigateway"
  tcp:
    - match:
      - port: 1433
      route:
      - destination:
          host: mssql.default
          port:
            number: 1433
